@startuml
'https://plantuml.com/class-diagram
title US008 – "As an Administrator, I want to register a new city in the system" – CD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam classAttributeIconSize 0

' ===== Classes =====
class RegisterCityUI {
}

class RegisterCityController {
  + getAllCountries(): List<Country>
  + registerCity(cityName: String, country: Country): City
}

interface ICityRepo {
  + registerCity(cityName : String, country : Country): City
}

class MemoCityRepo {
  + registerCity(cityName : String, country : Country): City
  + existsCityInACountry(cityName : String, country : Country): boolean
}

class CityFactory {
  + createCity(CityName : String, Country : Country) : City
}

class City {
  -_name : String
  -_country : Country
}

' ===== CountryRepo =====
interface ICountryRepo{
+ getAllCountries() :List<Country>
}

class MemoCountryRepo {
}

' ===== Interactions =====
RegisterCityUI "1" ..> "1" RegisterCityController : invokes
RegisterCityController "1" ..> "1" ICountryRepo : uses
RegisterCityController "1" ..> "1" ICityRepo : uses

ICityRepo "1" <|.. "1"MemoCityRepo
MemoCityRepo "1" --> "1" CityFactory : uses
CityFactory "1" --> "*" City : instantiates through

ICountryRepo "1" <|.. "1"MemoCountryRepo
@enduml
